cmake_minimum_required(VERSION 3.5.1)
project(common)

add_subdirectory(util) #done
add_subdirectory(proto) #done
add_subdirectory(math) #done
add_subdirectory(configs) #done
add_subdirectory(time) #done
add_subdirectory(status) #done
add_subdirectory(adapters) #done
add_subdirectory(vehicle_state) #done
add_subdirectory(vehicle_model) #done

